@@ -2,5 +2,5 @@ Andreas Jaeger <aj@suse.com>
 Chang-Yi Lee <cy.l@inwinstack.com>
 Jiaming Lin <robin890650@gmail.com>
 Tong Li <litong01@us.ibm.com>
+Xiao Tan <xt85@cornell.edu>
 spzala <spzala@us.ibm.com>
-xiaotan2 <xiaotan2@uw.edu>
