@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Meter Get_Meter_Byname implemented
 * Meters GET request implemented
 * Added more instructions on how to configure keystone middleware
 * move up one more dependencies
